Libretto: Fix issues with widget block centre alignments.

--- a/libretto/css/blocks.css
+++ b/libretto/css/blocks.css
@@ -387,13 +387,18 @@ hr.wp-block-separator {
 5.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
-/* Categories */
+/* General Widget styles */
 
-.wp-block-categories.aligncenter {
-	margin-left: 1.5em;
-	margin-right: 1.5em;
+.wp-block-categories.aligncenter,
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
 	text-align: center;
 }
+
+/* Categories */
 
 .wp-block-categories-list.alignleft {
 	margin-left: 1.5em;
