--- a/libretto/css/editor-blocks.css
+++ b/libretto/css/editor-blocks.css
@@ -966,12 +966,12 @@ See: https://stackoverflow.com/questions/16348489/is-there-a-css-hack-for-safari
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
-[data-align="center"] .wp-block-categories ul,
-[data-align="center"] .wp-block-latest-posts ul,
-[data-align="center"] .wp-block-archives ul {
-	list-style-position: inside; /* makes sure bullets are centred with centred lists */
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
 }
 
 /* Categories */
